--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -105,9 +105,11 @@
           </a>
         </li>
         <li id="filter" class="filter">
-          <%# TODO partial refresh needed %>
-          <%= form_tag do %>
-              <%= select_tag 'order', options_for_select({"최신순" => 1, "좋아요만" => 2, "싫어요만" => 3}, @params), onchange: "$('#order').submit();" %>
+          <% if @current_user.has_role?('evaluator') %>
+            <%# TODO partial refresh needed %>
+            <%= form_tag do %>
+                <%= select_tag 'order', options_for_select({"최신순" => 1, "좋아요만" => 2, "싫어요만" => 3}, @params), onchange: "$('#order').submit();" %>
+            <% end %>
           <% end %>
         </li>
       </ul>
