--- a/app/views/wikis/diff.erb
+++ b/app/views/wikis/diff.erb
@@ -28,15 +28,19 @@
             리비전 비교
           </a>
         </li>
-        <li class="filter tab_move">
-          <a href="/wiki/<%= @course.id %>/history">
-            강의 페이지로 <i class="fa fa-angle-right" aria-hidden="true"></i>
-          </a>
-        </li>
       </ul>
       </div>
 
       <div id="diff" class="tabcontent">
+        <div class="history_top">
+          <a href="/wiki/<%= @course.id %>/history" class="history_btn">
+            <i class="fa fa-history" aria-hidden="true"></i>히스토리
+          </a>
+          
+          <a href="/courses/<%= @course.id %>" class="history_btn history_btn_left">
+            <i class="fa fa-pencil" aria-hidden="true"></i>편집
+          </a>
+        </div>
         <%= @diff.to_s(:html_simple).html_safe %>
       </div>
     </div>
