--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,43 +4,46 @@
       <div class="centered main_center">
         <p class="logo">CLASSLION</p>
           <%= form_for(@user, url: signup_path) do |f| %>
+              <%# --------------이메일-------------- %>
               <div class="input_group login_input signup_input fit_div">
                 <div class="input_div">
                   <%= f.email_field :email, autofocus: true, placeholder: '이메일' %>
                 </div>
                 <div class="check_div">
-                  <span class="error" id="email_check"></span>
+                  <span id="email_check"></span>
                 </div>
               </div>
               <p class="error" id="email_error"></p>
 
+              <%# --------------비밀번호-------------- %>
               <div class="input_group login_input signup_input fit_div">
                 <div class="input_div">
-                  <%= f.password_field :password, autocomplete: false, placeholder: '비밀번호(8자~32자)', maxlength: 32%>
+                  <%= f.password_field :password, autocomplete: false, placeholder: '비밀번호(8자~32자)', maxlength: 32 %>
                 </div>
               </div>
-              <p class="error" id="password_length_error"></p>
-
-              <div class="input_group login_input signup_input  fit_div">
+               <%# --------------비밀번호 확인-------------- %>
+              <div class="input_group login_input signup_input fit_div">
                 <div class="input_div">
                   <%= f.password_field :password_confirmation, autocomplete: false, placeholder: '비밀번호 확인(8~32자)',  maxlength: 32 %>
                 </div>
                 <div class="check_div">
-                  <span class="error" id="password_check"></span>
+                  <span id="password_check"></span>
                 </div>
               </div>
               <p class="error" id="password_error"></p>
 
+              <%# --------------닉네임-------------- %>
               <div class="input_group login_input signup_input fit_div">
                 <div class="input_div">
                   <%= f.text_field :nickname, autofocus: false, placeholder: '닉네임(2~8자)', maxlength: 8 %>
                 </div>
                 <div class="check_div">
-                  <span class="error" id="nickname_check"></span>
+                  <span id="nickname_check"></span>
                 </div>
               </div>
               <p class="error" id="nickname_error"></p>
 
+              <%# --------------성별-------------- %>
               <div class="gender_div signup_input">
                 <%= f.radio_button :is_boy, 'true', checked: true, id: 'male' %>
                 <%= f.label :is_boy, '남자', class: 'gender_input', for: 'male' %>
@@ -49,6 +52,7 @@
                 <%= f.label :is_boy, '여자', class: 'gender_input', for: 'female' %>
               </div>
 
+              <%# --------------학교-------------- %>
               <div class="input_group login_input fit_div">
                 <div class="input_div">
                   <%= f.collection_select :university_id, University.all, :id, :local_name, {:prompt => '학교'} %><br>
@@ -66,10 +70,3 @@
   </div>
 </div>
 
-<script>
-$(function(){
-  $(".input_group").on("touchstart click", function(){
-    $(this).find("input").focus();
-  });
-});
-</script>
