강평열람권한없어도 자기가 쓴 강평은 보이게함, 수정 삭제 버튼 자신이 쓴 강평에만 보이게함

--- a/app/views/courses/_evaluations.html.erb
+++ b/app/views/courses/_evaluations.html.erb
@@ -36,13 +36,12 @@
 
                 <%= link_to (image_tag "siren.svg"), reports_path,  {remote: true, 'data-toggle' =>  "modal", 'data-target' => '#myModal'}  %>
 
-                <%# 만약 글쓴이라면! %>
+                <% if e.user.id == current_user.id %>
                 &nbsp;·&nbsp;
-
                 <a href="#"><i class="fa fa-pencil-square-o writer_icon" aria-hidden="true"></i></a>
                 &nbsp;·&nbsp;
                 <i class="fa fa-trash-o writer_icon" aria-hidden="true"></i>
-                <%# end %>
+                <% end %>
               </p>
               <p class="feed_etc_right">
                 <span><%= t "evaluation.writer" %></span> <%= e.user.nickname %>
