--- a/app/views/courses/_no_evaluations.html.erb
+++ b/app/views/courses/_no_evaluations.html.erb
@@ -2,15 +2,10 @@
     <div class="no_review_div course_no_review">
         <%= image_tag "/assets/lion_sad.svg", class: "", alt: "professor" %><br>
         <p class="feed_head">
-            아직 작성된 평가가 없어요!
+          <%= t "evaluation.no_evaluation" %>
         </p>
         <p class="feed_head2">
-            지금 소중한 강의평가를 남겨주세요
+          <%= t "evaluation.recommand" %>
         </p>
-        <!--<div class="info_btn_div no_review_btn">-->
-        <!--  <button class="info_btn">-->
-        <!--    <i class="fa fa-pencil" aria-hidden="true"></i> 강의평가 쓰러가기-->
-        <!--  </button>-->
-        <!--/div><%#////info_btn_div%>-->
     </div>
 </div>
