--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -78,7 +78,7 @@
         <div class="bar_comment"><%= @like_count %>명의 학생이 평가했습니다</div>
         
       <% else %>
-        <%= render "no_review" %>
+        <%= render "no_evaluations" %>
       <% end %>
     </div>
   </div>
